# safecopy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  safecopy.py
.github/workflows/: ci.yml  release.yml
tests/: test_safecopy.py
